# bgremover-lite

./: .gitignore  =13.1.0  BUILD.md  BUILD_GUIDE.md  CMakeLists.txt  CUSTOM_BACKGROUNDS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICK_START.md  README.md  TEST_RESULTS.md  VIRTUAL_CAMERA_GUIDE.md  bgremover  bgremover_gpu  bgremover_gpu.py  bgremover_optimized.py  build.sh  build_opencv_cuda.sh  build_with_models.sh  check_system.sh  debug_colors  debug_colors.cpp  demo_background_blur.py  main.cpp  main_gpu.cpp  performance_benchmark.py  setup_cuda_env.sh  setup_virtual_camera.sh  step2.sh  test_1080p.py  test_bgremover.py  test_colors.cpp  test_gpu.cpp  test_model  test_model.cpp  test_model_download.py  test_model_download.sh  test_performance  test_performance.cpp  test_virtual_camera.sh  (+3 more)
cmake/: CMakeLists.txt  ModelDownload_README.md
models/: README.md
